# flask-cupcakes

./: app.py  create_db.py  models.py  pyproject.toml  tests.py
static/: app.js
templates/: index.html
