[tool.poetry]
name = "flask-cupcakes"
version = "0.1.0"
description = ""
authors = ["AJ <skyhighzed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
ipython = "^8.29.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
